--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ git:
 
 before_install:
     - if [[ $TRAVIS_OS_NAME == osx ]]; then
-        brew update;
-        brew install fpc;
+        brew update > /dev/null;
+        brew install fpc > /dev/null;
       else
-        sudo apt install fp-compiler;
+        sudo apt -q install fp-compiler;
       fi
 
 install:
